--- a/odin-recipes/pages/chickenAdobo.html
+++ b/odin-recipes/pages/chickenAdobo.html
@@ -34,7 +34,9 @@
         </header>
         <div class="content-container">
             <div class="video">
-
+                <video width="400" controls>
+                    <source media="(min-width: )" srcset="">
+                </video>
             </div>
             <div class="photos">
 
